--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^14.3.2",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
+    "mysql2": "^2.3.3"
   }
 }
